--- a/index.html
+++ b/index.html
@@ -6,12 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>new year new mission</title>
     <link rel="stylesheet" href="style.css" />
+
+    <script
+      src="https://kit.fontawesome.com/83bcfdc640.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- header section -->
-    <header></header>
+    <header class="banner">
+      <div class="container">
+        <img src="images/banner/banner3.png" alt="" />
+        <div class="text-left">
+          <h1 class="title">All Thinks Are Possible If You believe</h1>
+          <p class="description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words
+          </p>
+          <a href="">
+            <button class="btn-primary">Contact us</button>
+          </a>
+        </div>
+      </div>
+    </header>
+
     <!-- main section -->
-    <main></main>
+    <main>
+      <section>
+        <div class="failures">
+          <div class="failures-person">
+            <img src="images/person.png" alt="" />
+          </div>
+          <div class="failures-details">
+            <h3 class="fi-title">My failures of previous year</h3>
+            <p class="fi-subtitle">
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock.
+            </p>
+            <div class="icon-text">
+              <p>
+                <i class="fa-solid fa-check icon-color"></i> Contrary to popular
+                belief, is not simply.
+              </p>
+              <p>
+                <i class="fa-solid fa-check icon-color"></i> Contrary to popular
+                belief.
+              </p>
+              <p>
+                <i class="fa-solid fa-check icon-color"></i> Contrary to popular
+                , is not simply.
+              </p>
+              <p>
+                <i class="fa-solid fa-check icon-color"></i> Contrary to popular
+                belief, is not simply.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <!-- footer section -->
     <footer></footer>
   </body>
