--- a/index.html
+++ b/index.html
@@ -33,41 +33,69 @@
 
     <!-- main section -->
     <main>
-      <section>
-        <div class="failures">
-          <div class="failures-person">
-            <img src="images/person.png" alt="" />
-          </div>
-          <div class="failures-details">
-            <h3 class="fi-title">My failures of previous year</h3>
-            <p class="fi-subtitle">
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old. Richard McClintock.
+      <section class="failures">
+        <div class="failures-person">
+          <img src="images/person.png" alt="" />
+        </div>
+        <div class="failures-details">
+          <h3 class="fi-title">My failures of previous year</h3>
+          <p class="fi-subtitle">
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock.
+          </p>
+          <div class="icon-text">
+            <p>
+              <i class="fa-solid fa-check icon-color"></i> Contrary to popular
+              belief, is not simply.
             </p>
-            <div class="icon-text">
-              <p>
-                <i class="fa-solid fa-check icon-color"></i> Contrary to popular
-                belief, is not simply.
-              </p>
-              <p>
-                <i class="fa-solid fa-check icon-color"></i> Contrary to popular
-                belief.
-              </p>
-              <p>
-                <i class="fa-solid fa-check icon-color"></i> Contrary to popular
-                , is not simply.
-              </p>
-              <p>
-                <i class="fa-solid fa-check icon-color"></i> Contrary to popular
-                belief, is not simply.
-              </p>
-            </div>
+            <p>
+              <i class="fa-solid fa-check icon-color"></i> Contrary to popular
+              belief.
+            </p>
+            <p>
+              <i class="fa-solid fa-check icon-color"></i> Contrary to popular ,
+              is not simply.
+            </p>
+            <p>
+              <i class="fa-solid fa-check icon-color"></i> Contrary to popular
+              belief, is not simply.
+            </p>
           </div>
         </div>
       </section>
-    </main>
 
+      <!-- my plan section -->
+      <section class="plan-containers">
+        <div>
+          <h2 class="my-plan">My plan</h2>
+        </div>
+
+        <div class="plan-container">
+          <div class="plan">
+            <img class="img-plan" src="images/icons/web.png" alt="" />
+            <h4 class="title-plan">Web Development</h4>
+            <p class="title-des">I want to start</p>
+            </p>
+        </div>
+        <div class="plan-details">
+          <img src="images/icons/js.png" alt="" />
+          <h4 class="title-plan">Javascript</h4>
+          <p class="title-des">I want to start</p>
+        </div>
+        <div class="plan-details">
+          <img src="images/icons/smoke.png" alt="" />
+          <h4 class="title-plan">Smoking Habit</h4>
+          <p class="title-des">I want to end</p>
+        </div>
+        <div class="plan-details">
+          <img src="images/icons/ecom.png" alt="" />
+          <h4 class="title-plan">ecommerce</h4>
+          <p class="title-des">I want to start</p>
+        </div>
+        </div>
+      </section>
+    </main>
     <!-- footer section -->
     <footer></footer>
   </body>
