--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>new year new mission</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
 
     <script
       src="https://kit.fontawesome.com/83bcfdc640.js"
@@ -93,6 +94,46 @@
           <h4 class="title-plan">ecommerce</h4>
           <p class="title-des">I want to start</p>
         </div>
+        </div>
+      </section>
+<!-- image section -->
+<section>
+  <div class="watch-img">
+    <img src="images/watch.png" alt="">
+ <h1 class="title-watch">Awlays keep a positive mindset</h1>
+          <a href="">
+            <button class="btn-primary">Contact us</button>
+          </a>
+  </div>
+</section>
+
+      <!-- Future section -->
+      <section class="future">
+        <div>
+          <h3 class="section-title">Future</h3>
+          <p class="section-description">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+          </p>
+          <p class="section-description">Email : info@gmail.com</p>
+          <p class="section-description">Phone : 01500 00 00 00</p>
+          <a href="">
+            <img src="images/icons/fb.png" alt="" />
+          </a>
+          <a href="">
+            <img src="images/icons/twitter.png" alt="" />
+          </a>
+          <a href="">
+            <img src="images/icons/youtube.png" alt="" />
+          </a>
+        </div>
+
+        <div>
+          <h3 class="section-title">Subscribe</h3>
+          <form action="">
+            
+            <input  type="email" name="" id="" placeholder="Enter your Email" />
+            <input class="btn-primary" type="submit" value="Subscribe" />
+          </form>
         </div>
       </section>
     </main>
