--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
         </div>
         </div>
       </section>
-<!-- image section -->
+<!-- image gradient section -->
 <section>
   <div class="watch-img">
-    <img src="images/watch.png" alt="">
  <h1 class="title-watch">Awlays keep a positive mindset</h1>
           <a href="">
             <button class="btn-primary">Contact us</button>
